Add soring tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.datasource.password=12345
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=false
 
 ias.http.auth-token-header-name = ias-principal
 ias.http.auth-token = 4eda298667deef
