--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -13,9 +13,9 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 ias.http.auth-token-header-name = ias-test
 ias.http.auth-token = test
